Add View to CLASSlist CLASSadd CLASSedit

--- a/app/templates/classes/class.html
+++ b/app/templates/classes/class.html
@@ -4,7 +4,7 @@
 <div class="content-section">
     <div class="center">
         <h1>
-            <a href="{{ url_for('class_room.classRoom', class_id=_class.id) }}">
+            <a href="{{ url_for('classes.one_class', class_id=_class.id) }}">
                 {{ _class.name }}
             </a>
         </h1>
