--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,6 +26,7 @@
                 {% if current_user.is_authenticated %}
                     {% if current_user.is_admin %}
                         <li><a href="{{ url_for('admin.list_classrooms') }}">Classrooms</a></li>
+                        <li><a href="{{ url_for('classes.list_classes') }}">Classes</a></li>
                         <li><a href="{{ url_for('admin.list_roles') }}">Roles</a></li>
                         <li><a href="{{ url_for('admin.list_users') }}">Users</a></li>
                         <li><a href="{{ url_for('admin.list_class_specializations') }}">Class Spec</a></li>
@@ -62,6 +63,7 @@
                     {% if current_user.is_authenticated %}
                         {% if current_user.is_admin %}
                             <li><a href="{{ url_for('admin.list_classrooms') }}">Classrooms</a></li>
+                            <li><a href="{{ url_for('classes.list_classes') }}">Classes</a></li>
                             <li><a href="{{ url_for('admin.list_roles') }}">Roles</a></li>
                             <li><a href="{{ url_for('admin.list_users') }}">Users</a></li>
                             <li><a href="{{ url_for('admin.list_class_specializations') }}">Class Spec</a></li>
