--- a/app/templates/home/teacher_dashboard.html
+++ b/app/templates/home/teacher_dashboard.html
@@ -15,7 +15,7 @@
             {% endif %}
         </div>
         <div>Head Class:
-            <a href="{{ url_for('class_room.classRoom', class_id=headClass.id) }}">
+            <a href="{{ url_for('classes.one_class', class_id=headClass.id) }}">
                 {{ headClass.name }}
             </a>
         </div>
