--- a/app/templates/classes/addStudentToClass.html
+++ b/app/templates/classes/addStudentToClass.html
@@ -10,6 +10,7 @@
       <div class="inner">
         <div class="center">
             <h1>{{ title }}</h1>
+            <h2>{{ class_name }}</h2>
             <br/>
             {{ wtf.quick_form(form) }}
         </div>
