--- a/app/templates/classes/classes.html
+++ b/app/templates/classes/classes.html
@@ -12,14 +12,15 @@
             <table class="table table-striped table-bordered">
               <thead>
                 <tr>
-                    <th width="5%"> ID </th>
-                    <th width="8%"> Name </th>
-                    <th width="13%"> Date Start </th>
-                    <th width="13%"> Date End </th>
+                    <th width="4%"> ID </th>
+                    <th width="6%"> Name </th>
+                    <th width="12%"> Date Start </th>
+                    <th width="12%"> Date End </th>
                     <th width="15%"> Spec </th>
-                    <th width="23%"> Head Teacher </th>
-                    <th width="20%"> Classroom </th>
-                    <th width="8%"> Edit </th>
+                    <th width="20%"> Head Teacher </th>
+                    <th width="17%"> Classroom </th>
+                    <th width="7%"> Edit </th>
+                    <th width="7%"> Add student </th>
                 </tr>
               </thead>
               <tbody>
@@ -34,7 +35,12 @@
                     <td> {{ classOne.classrooms.name }} ({{ classOne.classrooms.room_specializations.name }}) </td>
                     <td>
                         <a href="{{ url_for('classes.edit_class', id=classOne.id) }}">
-                            <i class="fa fa-pencil"></i>
+                            <i class="fa fa-pencil"></i> edit
+                        </a>
+                    </td>
+                    <td>
+                        <a href="{{ url_for('classes.add_student', id=classOne.id) }}">
+                            <i class="fa fa-pencil"></i> add
                         </a>
                     </td>
                 </tr>
