--- a/app/templates/admin/classrooms/classroom.html
+++ b/app/templates/admin/classrooms/classroom.html
@@ -1,11 +1,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% extends "base.html" %}
 {% block title %}
-    {% if add_role %}
-        Add Classroom
-    {% else %}
-        Edit Classroom
-    {% endif %}
+    {{ title }}
 {% endblock %}
 {% block body %}
 <div class="content-section">
@@ -13,11 +9,7 @@
     <div class="middle">
       <div class="inner">
         <div class="center">
-            {% if add_role %}
-                <h1>Add Classroom</h1>
-            {% else %}
-                <h1>Edit Classroom</h1>
-            {% endif %}
+            {{ title }}
             <br/>
             {{ wtf.quick_form(form) }}
         </div>
