--- a/app/templates/admin/users/user.html
+++ b/app/templates/admin/users/user.html
@@ -1,6 +1,8 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% extends "base.html" %}
-{% block title %}Assign User{% endblock %}
+{% block title %}
+    {{ title }}
+{% endblock %}
 {% block body %}
 <div class="content-section">
  <div class="outer">
