--- a/app/templates/admin/users/users.html
+++ b/app/templates/admin/users/users.html
@@ -1,15 +1,13 @@
-{#{% import "bootstrap/utils.html" as utils %}#}
 {% extends "base.html" %}
-{% block title %}Users{% endblock %}
+{% block title %}
+    {{ title }}
+{% endblock %}
 {% block body %}
 <div class="content-section">
   <div class="outer">
     <div class="middle">
       <div class="inner">
-{#        <br/>#}
-{#        {{ utils.flashed_messages() }}#}
-{#        <br/>#}
-        <h1 style="text-align:center;">Users</h1>
+        <h1 style="text-align:center;">{{ title }}</h1>
         {% if users %}
           <hr class="intro-divider">
           <div class="center">
