--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-{% block title %}{{ title }}{% endblock %}
+{% block title %}
+    {{ title }}
+{% endblock %}
 {% block body %}
 <div class="intro-header">
     <div class="container">
