--- a/app/templates/home/student_dashboard.html
+++ b/app/templates/home/student_dashboard.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}User{% endblock %}
+{% block title %}Student{% endblock %}
 {% block body %}
 <div class="content-section">
     <div class="center">
