--- a/app/templates/home/teacher_dashboard.html
+++ b/app/templates/home/teacher_dashboard.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-{% block title %}User{% endblock %}
+{% block title %}
+    Teacher
+{% endblock %}
 {% block body %}
 <div class="content-section">
     <div class="center">
