Added the ability to bind the parent to the student

--- a/app/templates/admin/parent_to_student/edit.html
+++ b/app/templates/admin/parent_to_student/edit.html
@@ -10,6 +10,9 @@
       <div class="inner">
         <div class="center">
             <h1> {{ title }} </h1>
+            {% if add_parent_to_student==False %}
+                <h2>{{ parent_name }}</h2>
+            {% endif %}
             <br/>
             {{ wtf.quick_form(form) }}
         </div>
