--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,8 @@
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
                     {% if current_user.is_admin %}
+                        <li><a href="{{ url_for('admin.list_students') }}">Students</a></li>
+                        <li><a href="{{ url_for('admin.list_parent_to_student') }}">Parentst</a></li>
                         <li><a href="{{ url_for('admin.list_classrooms') }}">Classrooms</a></li>
                         <li><a href="{{ url_for('classes.list_classes') }}">Classes</a></li>
                         <li><a href="{{ url_for('admin.list_roles') }}">Roles</a></li>
@@ -62,6 +64,8 @@
                 <ul class="list-inline">
                     {% if current_user.is_authenticated %}
                         {% if current_user.is_admin %}
+                            <li><a href="{{ url_for('admin.list_students') }}">Students</a></li>
+                            <li><a href="{{ url_for('admin.list_parent_to_student') }}">Parentst</a></li>
                             <li><a href="{{ url_for('admin.list_classrooms') }}">Classrooms</a></li>
                             <li><a href="{{ url_for('classes.list_classes') }}">Classes</a></li>
                             <li><a href="{{ url_for('admin.list_roles') }}">Roles</a></li>
