--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,7 @@
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
                     {% if current_user.is_admin %}
-                        <li><a href="{{ url_for('admin.list_students') }}">Students</a></li>
+                        <li><a href="{{ url_for('admin.list_students_class') }}">Students</a></li>
                         <li><a href="{{ url_for('admin.list_parent_to_student') }}">Parentst</a></li>
                         <li><a href="{{ url_for('admin.list_classrooms') }}">Classrooms</a></li>
                         <li><a href="{{ url_for('classes.list_classes') }}">Classes</a></li>
@@ -64,7 +64,7 @@
                 <ul class="list-inline">
                     {% if current_user.is_authenticated %}
                         {% if current_user.is_admin %}
-                            <li><a href="{{ url_for('admin.list_students') }}">Students</a></li>
+                            <li><a href="{{ url_for('admin.list_students_class') }}">Students</a></li>
                             <li><a href="{{ url_for('admin.list_parent_to_student') }}">Parentst</a></li>
                             <li><a href="{{ url_for('admin.list_classrooms') }}">Classrooms</a></li>
                             <li><a href="{{ url_for('classes.list_classes') }}">Classes</a></li>
