--- a/app/templates/admin/class_specializations/class_specializations.html
+++ b/app/templates/admin/class_specializations/class_specializations.html
@@ -5,62 +5,60 @@
   <div class="outer">
     <div class="middle">
       <div class="inner">
-        <h1 style="text-align:center;">Class Specialization</h1>
-        {% if specializations %}
+          <h1 style="text-align:center;">Class Specialization</h1>
           <hr class="intro-divider">
+
+          <div style="text-align: center">
+              <a href="{{ url_for('admin.add_class_specializations') }}" class="btn btn-default btn-lg">
+                <i class="fa fa-plus"></i> Add Class Specialization
+              </a>
+          </div>
+
+          {% if specializations %}
           <div class="center">
-            <table class="table table-striped table-bordered">
-              <thead>
-                <tr>
-                    <th width="10%"> ID </th>
-                    <th width="50%"> Name </th>
-                    <th width="10%"> Classes Count </th>
-                    <th width="15%"> Edit </th>
-                    <th width="15%"> Delete </th>
-                </tr>
-              </thead>
-              <tbody>
-              {% for specialization in specializations %}
-                <tr>
-                    <td> {{ specialization.id }} </td>
-                    <td> {{ specialization.name }} </td>
-                    <td>
-                        {% if specialization.specialization_id %}
-                            {{ specialization.specialization_id.count() }}
-                        {% else %}
-                            0
-                        {% endif %}
-                    </td>
-                    <td>
-                    <a href="{{ url_for('admin.edit_class_specializations', id=specialization.id) }}">
-                        <i class="fa fa-pencil"></i> Edit
-                    </a>
-                    </td>
-                    <td>
-                    <a href="{{ url_for('admin.delete_class_specializations', id=specialization.id) }}">
-                        <i class="fa fa-trash"></i> Delete
-                    </a>
-                    </td>
-                </tr>
-              {% endfor %}
-              </tbody>
-            </table>
+              <table class="table table-striped table-bordered">
+                  <thead>
+                  <tr>
+                      <th width="10%"> ID </th>
+                      <th width="50%"> Name </th>
+                      <th width="10%"> Classes Count </th>
+                      <th width="15%"> Edit </th>
+                      <th width="15%"> Delete </th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  {% for specialization in specializations %}
+                  <tr>
+                      <td> {{ specialization.id }} </td>
+                      <td> {{ specialization.name }} </td>
+                      <td> {{ specialization.specialization_id.count() }} </td>
+                      <td>
+                          <a href="{{ url_for('admin.edit_class_specializations', id=specialization.id) }}">
+                              <i class="fa fa-pencil"></i> Edit
+                          </a>
+                      </td>
+                      <td>
+                          <a href="{{ url_for('admin.delete_class_specializations', id=specialization.id) }}">
+                              <i class="fa fa-trash"></i> Delete
+                          </a>
+                      </td>
+                  </tr>
+                  {% endfor %}
+                  </tbody>
+              </table>
           </div>
+          {% else %}
           <div style="text-align: center">
-        {% else %}
+              <h3> No class specialization have been added. </h3>
+          </div>
+          {% endif %}
+
           <div style="text-align: center">
-            <h3> No specialization have been added. </h3>
-            <hr class="intro-divider">
+              <a href="{{ url_for('admin.add_class_specializations') }}" class="btn btn-default btn-lg">
+                <i class="fa fa-plus"></i> Add Class Specialization
+              </a>
           </div>
-        {% endif %}
-          <div style="text-align: center">
-          <a href="{{ url_for('admin.add_class_specializations') }}" class="btn btn-default btn-lg">
-            <i class="fa fa-plus"></i>
-            Add Class Specialization
-          </a>
-          </div>
-          </div>
-          </div>
+
       </div>
     </div>
   </div>
