--- a/app/templates/admin/classrooms/classrooms.html
+++ b/app/templates/admin/classrooms/classrooms.html
@@ -5,9 +5,16 @@
   <div class="outer">
     <div class="middle">
       <div class="inner">
-        <h1 style="text-align:center;">Classrooms</h1>
-        {% if classrooms %}
+          <h1 style="text-align:center;">Classrooms</h1>
           <hr class="intro-divider">
+
+          <div style="text-align: center">
+          <a href="{{ url_for('admin.add_classroom') }}" class="btn btn-default btn-lg">
+              <i class="fa fa-plus"></i>Add Classrooms
+          </a>
+          </div>
+
+          {% if classrooms %}
           <div class="center">
             <table class="table table-striped table-bordered">
               <thead>
@@ -27,12 +34,12 @@
                     <td> {{ classroom.room_specializations.name }} </td>
                     <td>
                         <a href="{{ url_for('admin.edit_classroom', id=classroom.id) }}">
-                            <i class="fa fa-pencil"></i> Edit
+                            <i class="fa fa-pencil"></i> edit
                         </a>
                     </td>
                     <td>
                         <a href="{{ url_for('admin.delete_classroom', id=classroom.id) }}">
-                            <i class="fa fa-trash"></i> Delete
+                            <i class="fa fa-trash"></i> delete
                         </a>
                     </td>
                 </tr>
@@ -40,20 +47,16 @@
               </tbody>
             </table>
           </div>
+          {% else %}
           <div style="text-align: center">
-        {% else %}
-          <div style="text-align: center">
-            <h3> No classrooms have been added. </h3>
-            <hr class="intro-divider">
+              <h3> No classrooms have been added. </h3>
           </div>
-        {% endif %}
+          {% endif %}
+
           <div style="text-align: center">
           <a href="{{ url_for('admin.add_classroom') }}" class="btn btn-default btn-lg">
-            <i class="fa fa-plus"></i>
-            Add Classrooms
+              <i class="fa fa-plus"></i>Add Classrooms
           </a>
-          </div>
-          </div>
           </div>
       </div>
     </div>
