--- a/app/templates/admin/roles/roles.html
+++ b/app/templates/admin/roles/roles.html
@@ -7,62 +7,61 @@
   <div class="outer">
     <div class="middle">
       <div class="inner">
-        <h1 style="text-align:center;">{{ title }}</h1>
-        {% if roles %}
+          <h1 style="text-align:center;">{{ title }}</h1>
           <hr class="intro-divider">
+
+          <div style="text-align: center">
+          <a href="{{ url_for('admin.add_role') }}" class="btn btn-default btn-lg">
+              <i class="fa fa-plus"></i> Add Role
+          </a>
+          </div>
+
+          {% if roles %}
+
           <div class="center">
-            <table class="table table-striped table-bordered">
+              <table class="table table-striped table-bordered">
               <thead>
-                <tr>
-                    <th width="5%"> ID </th>
-                    <th width="15%"> Name </th>
-                    <th width="40%"> Description </th>
-                    <th width="10%"> Roles Count </th>
-                    <th width="15%"> Edit </th>
-                    <th width="15%"> Delete </th>
-                </tr>
+              <tr>
+                  <th width="5%"> ID </th>
+                  <th width="15%"> Name </th>
+                  <th width="40%"> Description </th>
+                  <th width="10%"> Roles Count </th>
+                  <th width="15%"> Edit </th>
+                  <th width="15%"> Delete </th>
+              </tr>
               </thead>
               <tbody>
               {% for role in roles %}
-                <tr>
-                    <td> {{ role.id }} </td>
-                    <td> {{ role.name }} </td>
-                    <td> {{ role.description }} </td>
-                    <td>
-                    {% if role.user_id %}
-                      {{ role.user_id.count() }}
-                    {% else %}
-                      0
-                    {% endif %}
-                    </td>
-                    <td>
-                    <a href="{{ url_for('admin.edit_role', id=role.id) }}">
-                        <i class="fa fa-pencil"></i> Edit
-                    </a>
-                    </td>
-                    <td>
-                    <a href="{{ url_for('admin.delete_role', id=role.id) }}">
-                        <i class="fa fa-trash"></i> Delete
-                    </a>
-                    </td>
-                </tr>
+                  <tr>
+                      <td> {{ role.id }} </td>
+                      <td> {{ role.name }} </td>
+                      <td> {{ role.description }} </td>
+                      <td> {{ role.user_id.count() }} </td>
+                      <td>
+                          <a href="{{ url_for('admin.edit_role', id=role.id) }}">
+                              <i class="fa fa-pencil"></i> Edit
+                          </a>
+                      </td>
+                      <td>
+                          <a href="{{ url_for('admin.delete_role', id=role.id) }}">
+                              <i class="fa fa-trash"></i> Delete
+                          </a>
+                      </td>
+                  </tr>
               {% endfor %}
               </tbody>
-            </table>
+              </table>
           </div>
+          {% else %}
           <div style="text-align: center">
-        {% else %}
-          <div style="text-align: center">
-            <h3> No roles have been added. </h3>
-            <hr class="intro-divider">
+              <h3> No roles have been added. </h3>
           </div>
-        {% endif %}
+          {% endif %}
+
           <div style="text-align: center">
           <a href="{{ url_for('admin.add_role') }}" class="btn btn-default btn-lg">
-            <i class="fa fa-plus"></i>
-            Add Role
+              <i class="fa fa-plus"></i> Add Role
           </a>
-          </div>
           </div>
       </div>
     </div>
