--- a/app/templates/admin/room_specializations/room_specialization.html
+++ b/app/templates/admin/room_specializations/room_specialization.html
@@ -9,7 +9,7 @@
     <div class="middle">
       <div class="inner">
         <div class="center">
-            {{ title }}
+            <h1> {{ title }} </h1>
             <br/>
             {{ wtf.quick_form(form) }}
         </div>
