--- a/app/templates/admin/students/list.html
+++ b/app/templates/admin/students/list.html
@@ -1,78 +1,87 @@
 {% extends "base.html" %}
 {% block title %}
-    Students to class
+    Student-Class
 {% endblock %}
 {% block body %}
 <div class="content-section">
   <div class="outer">
     <div class="middle">
       <div class="inner">
-        <h1 style="text-align:center;">Students to class</h1>
-        {% if students %}
+
+          <h1 style="text-align:center;">Student-Class relationship</h1>
           <hr class="intro-divider">
-          <div class="center">
-            <table class="table table-striped table-bordered">
-              <thead>
-                <tr>
-                    <th width="40%"> Student </th>
-                    <th width="40%"> Class </th>
-                    <th width="10%"> Edit </th>
-                    <th width="10%"> Delete </th>
-                </tr>
-              </thead>
-              <tbody>
-              {% for student in students %}
-                <tr>
-                    <td>
-                        {{ student }}
-                    </td>
-                    <td>
-                        {% if student.studentInClass.first().classes%}
-                            {{ student.studentInClass.first().classes }}
-                        {% else %}
-                            not linked
-                        {% endif %}
-                    </td>
-                    <td>
-                        {% if student.studentInClass.first().classes%}
-                            <a href="{{ url_for('admin.edit_students_class', id=student.id) }}">
-                            <i class="fa fa-pencil"></i> Edit
-                            </a>
-                        {% else %}
-                            <a href="{{ url_for('admin.edit_students_class', id=student.id) }}">
-                            <i class="fa fa-pencil"></i> add link
-                            </a>
-                        {% endif %}
-                    </td>
-                    <td>
-                        {% if student.studentInClass.first().classes%}
-                            <a href="{{ url_for('admin.delete_students_class', id=student.id) }}">
-                            <i class="fa fa-trash"></i> Delete
-                            </a>
-                        {% else %}
-                            not linked
-                        {% endif %}
-                    </td>
-                </tr>
-              {% endfor %}
-              </tbody>
-            </table>
-          </div>
+
           <div style="text-align: center">
-        {% else %}
+            <a href="{{ url_for('admin.add_students_class') }}" class="btn btn-default btn-lg">
+                <i class="fa fa-plus"></i> Add student-class relationship
+            </a>
+        </div>
+
+          {% if students %}
+              <div class="center">
+                  <table class="table table-striped table-bordered">
+                  <thead>
+                      <tr>
+                          <th width="50%"> Student </th>
+                          <th width="20%"> Class </th>
+                          <th width="15%"> Bind </th>
+                          <th width="15%"> Unbind </th>
+                      </tr>
+                  </thead>
+                  <tbody>
+                  {% for student in students %}
+                  <tr>
+                      <td>
+                          <a href="{{ url_for('home.student_dashboard',id=student.id) }}">
+                              {{ student }}
+                          </a>
+                      </td>
+                      <td>
+                          {% if student.studentInClass.first().classes%}
+                              <a href="{{ url_for('classes.one_class', class_id=student.studentInClass.first().classes.id) }}">
+                                  {{ student.studentInClass.first().classes }}
+                              </a>
+                          {% else %}
+                              not linked
+                          {% endif %}
+                      </td>
+                      <td>
+                          {% if student.studentInClass.first().classes%}
+                              <a href="{{ url_for('admin.edit_students_class', id=student.id) }}">
+                                  <i class="fa fa-link"></i> change bind
+                              </a>
+                          {% else %}
+                              <a href="{{ url_for('admin.edit_students_class', id=student.id) }}">
+                                  <i class="fa fa-chain"></i> add link
+                              </a>
+                          {% endif %}
+                      </td>
+                      <td>
+                          {% if student.studentInClass.first().classes%}
+                              <a href="{{ url_for('admin.delete_students_class', id=student.id) }}">
+                                  <i class="fa fa-chain-broken"></i> remove bind
+                              </a>
+                          {% else %}
+                              not linked
+                          {% endif %}
+                      </td>
+                  </tr>
+                  {% endfor %}
+                  </tbody>
+                </table>
+              </div>
+          {% else %}
+              <div style="text-align: center">
+                  <h3> No students. </h3>
+              </div>
+          {% endif %}
+
           <div style="text-align: center">
-            <h3> No students. </h3>
-            <hr class="intro-divider">
+              <a href="{{ url_for('admin.add_students_class') }}" class="btn btn-default btn-lg">
+                  <i class="fa fa-plus"></i> Add student-class relationship
+              </a>
           </div>
-        {% endif %}
-          <div style="text-align: center">
-          <a href="{{ url_for('admin.add_students_class') }}" class="btn btn-default btn-lg">
-            <i class="fa fa-plus"></i>
-            Add students
-          </a>
-          </div>
-          </div>
-          </div>
+
       </div>
     </div>
   </div>
