--- a/app/templates/admin/users/users.html
+++ b/app/templates/admin/users/users.html
@@ -7,84 +7,96 @@
   <div class="outer">
     <div class="middle">
       <div class="inner">
-        <h1 style="text-align:center;">{{ title }}</h1>
-        {% if users %}
+          <h1 style="text-align:center;">{{ title }}</h1>
           <hr class="intro-divider">
+
+          <div style="text-align: center">
+              <a href="{{ url_for('admin.add_user') }}" class="btn btn-default btn-lg">
+                  <i class="fa fa-plus"></i>Add User
+              </a>
+          </div>
+
+          {% if users %}
           <div class="center">
-            <table class="table table-striped table-bordered">
+              <table class="table table-striped table-bordered">
               <thead>
-                <tr>
-                    <th width="4%"> ID </th>
-                    <th width="10%"> Login </th>
-                    <th width="21%"> Name </th>
-                    <th width="15%"> Mail </th>
-                    <th width="15%"> Telephone </th>
-                    <th width="15%"> Role </th>
-                    <th width="10%"> Edit </th>
-                    <th width="10%"> Delete </th>
-                </tr>
+              <tr>
+                  <th width="4%"> ID </th>
+                  <th width="9%"> Login </th>
+                  <th width="22%"> Name </th>
+                  <th width="15%"> Mail </th>
+                  <th width="15%"> Telephone </th>
+                  <th width="15%"> Role </th>
+                  <th width="10%"> Edit </th>
+                  <th width="10%"> Delete </th>
+              </tr>
               </thead>
               <tbody>
               {% for user in users %}
-                {% if user.is_admin %}
-                    <tr style="background-color: #138d75; color: white;">
-                        <td> {{ user.id }} </td>
-                        <td> {{ user.username }} </td>
-                        <td> <i class="fa fa-key"></i> Admin </td>
-                        <td> N/A </td>
-                        <td> N/A </td>
-                        <td> N/A </td>
-                        <td> N/A </td>
-                        <td> N/A </td>
-                    </tr>
-                {% else %}
-                    <tr>
-                        <td> {{ user.id }} </td>
-                        <td> {{ user.username }} </td>
-                        <td> {{ user.last_name }} {{ user.first_name }} {{ user.middle_name }}</td>
-                        <td> {{ user.email }} </td>
-                        <td>
-                        {% if user.tel %}
-                          {{ user.tel }}
-                        {% else %}
-                          no telephone
-                        {% endif %}
-                        </td>
-                        <td>
-                        {% if user.roles%}
-                          {{ user.roles.name }}
-                        {% else %}
-                          -
-                        {% endif %}
-                        </td>
-                        <td>
-                        <a href="{{ url_for('admin.edit_user', id=user.id) }}">
-                            <i class="fa fa-pencil"></i> Edit
-                        </a>
-                        </td>
-                        <td>
-                        <a href="{{ url_for('admin.delete_user', id=user.id) }}">
-                            <i class="fa fa-trash"></i> Delete
-                        </a>
-                        </td>
-                    </tr>
-                {% endif %}
+                  {% if user.is_admin %}
+                      <tr style="background-color: #138d75; color: white;">
+                          <td> {{ user.id }} </td>
+                          <td> {{ user.username }} </td>
+                          <td> <i class="fa fa-key"></i> Admin </td>
+                          <td> N/A </td>
+                          <td> N/A </td>
+                          <td> N/A </td>
+                          <td> N/A </td>
+                          <td> N/A </td>
+                      </tr>
+                  {% else %}
+                      <tr>
+                          <td> {{ user.id }} </td>
+                          <td> {{ user.username }} </td>
+                          <td>
+                              {% if user.roles.id == 1%}
+                              <a href="{{ url_for('home.teacher_dashboard', id=user.id) }}">
+                              {% elif user.roles.id == 2 %}
+                              <a href="{{ url_for('home.student_dashboard', id=user.id) }}">
+                              {% elif user.roles.id == 3 %}
+                              <a href="{{ url_for('home.parent_dashboard', id=user.id) }}">
+                              {% endif %}
+                                  {{ user }}
+                              </a>
+                          </td>
+                          <td> {{ user.email }} </td>
+                          <td>
+                          {% if user.tel %}
+                              {{ user.tel }}
+                          {% else %}
+                              no telephone
+                          {% endif %}
+                          </td>
+                          <td> {{ user.roles.name }}
+                          </td>
+                          <td>
+                              <a href="{{ url_for('admin.edit_user', id=user.id) }}">
+                                  <i class="fa fa-pencil"></i> Edit
+                              </a>
+                          </td>
+                          <td>
+                              <a href="{{ url_for('admin.delete_user', id=user.id) }}">
+                                  <i class="fa fa-trash"></i> Delete
+                              </a>
+                          </td>
+                      </tr>
+                  {% endif %}
               {% endfor %}
               </tbody>
-            </table>
+              </table>
           </div>
-        {% else %}
+          {% else %}
           <div style="text-align: center">
-            <h3> No Users have been added. </h3>
-            <hr class="intro-divider">
+              <h3> No Users have been added. </h3>
           </div>
-        {% endif %}
+          {% endif %}
+
           <div style="text-align: center">
-          <a href="{{ url_for('admin.add_user') }}" class="btn btn-default btn-lg">
-            <i class="fa fa-plus"></i>
-            Add User
-          </a>
+              <a href="{{ url_for('admin.add_user') }}" class="btn btn-default btn-lg">
+                  <i class="fa fa-plus"></i>Add User
+              </a>
           </div>
+
         </div>
       </div>
     </div>
