--- a/app/templates/classes/classes.html
+++ b/app/templates/classes/classes.html
@@ -5,62 +5,80 @@
   <div class="outer">
     <div class="middle">
       <div class="inner">
-        <h1 style="text-align:center;">Classes</h1>
-        {% if classesList %}
+          <h1 style="text-align:center;">Classes</h1>
           <hr class="intro-divider">
+
+          <div style="text-align: center">
+              <a href="{{ url_for('classes.add_class') }}" class="btn btn-default btn-lg">
+                  <i class="fa fa-plus"></i> Add Class
+              </a>
+          </div>
+
+          {% if classesList %}
           <div class="center">
-            <table class="table table-striped table-bordered">
+              <table class="table table-striped table-bordered">
               <thead>
-                <tr>
-                    <th width="4%"> ID </th>
-                    <th width="6%"> Name </th>
-                    <th width="12%"> Date Start </th>
-                    <th width="12%"> Date End </th>
-                    <th width="15%"> Spec </th>
-                    <th width="20%"> Head Teacher </th>
-                    <th width="17%"> Classroom </th>
-                    <th width="7%"> Edit </th>
-                    <th width="7%"> Add student </th>
-                </tr>
+              <tr>
+                  <th width="4%"> ID </th>
+                  <th width="6%"> Name </th>
+                  <th width="9%"> Date Start </th>
+                  <th width="9%"> Date End </th>
+                  <th width="14%"> Spec </th>
+                  <th width="24%"> Head Teacher </th>
+                  <th width="12%"> Classroom </th>
+                  <th width="7%"> Edit class </th>
+                  <th width="8%"> Delete class </th>
+                  <th width="7%"> Add student </th>
+              </tr>
               </thead>
               <tbody>
               {% for classOne in classesList %}
-                <tr>
-                    <td> {{ classOne.id }} </td>
-                    <td> {{ classOne.name }} </td>
-                    <td> {{ classOne.dateStartEducation.strftime('%d, %b %Y') }} </td>
-                    <td> {{ classOne.dateEndEducation.strftime('%d, %b %Y') }} </td>
-                    <td> {{ classOne.specializations.name }} </td>
-                    <td> {{ classOne.users.first_name }} {{ classOne.users.last_name }} {{ classOne.users.middle_name }} </td>
-                    <td> {{ classOne.classrooms.name }} ({{ classOne.classrooms.room_specializations.name }}) </td>
-                    <td>
-                        <a href="{{ url_for('classes.edit_class', id=classOne.id) }}">
-                            <i class="fa fa-pencil"></i> edit
-                        </a>
-                    </td>
-                    <td>
-                        <a href="{{ url_for('classes.add_student', id=classOne.id) }}">
-                            <i class="fa fa-pencil"></i> add
-                        </a>
-                    </td>
-                </tr>
+                  <tr>
+                      <td> {{ classOne.id }} </td>
+                      <td>
+                          <a href="{{ url_for('classes.one_class', class_id=classOne.id) }}">
+                              {{ classOne }}
+                          </a>
+                      </td>
+                      <td> {{ classOne.dateStartEducation.strftime('%d, %b %Y') }} </td>
+                      <td> {{ classOne.dateEndEducation.strftime('%d, %b %Y') }} </td>
+                      <td> {{ classOne.specializations.name }} </td>
+                      <td>
+                          <a href="{{ url_for('home.teacher_dashboard', id=classOne.users.id) }}">
+                              {{ classOne.users}}
+                          </a>
+                      </td>
+                      <td> {{ classOne.classrooms.name }} ({{ classOne.classrooms.room_specializations.name }}) </td>
+                      <td>
+                          <a href="{{ url_for('classes.edit_class', id=classOne.id) }}">
+                              <i class="fa fa-pencil"></i> edit
+                          </a>
+                      </td>
+                      <td>
+                          <a href="{{ url_for('classes.delete_class', id=classOne.id) }}">
+                              <i class="fa fa-trash"></i> delete
+                          </a>
+                      </td>
+                      <td>
+                          <a href="{{ url_for('classes.add_student', id=classOne.id) }}">
+                              <i class="fa fa-plus"></i> add
+                          </a>
+                      </td>
+                  </tr>
               {% endfor %}
               </tbody>
-            </table>
+              </table>
           </div>
+          {% else %}
           <div style="text-align: center">
-        {% else %}
-          <div style="text-align: center">
-            <h3> No class have been added. </h3>
-            <hr class="intro-divider">
+              <h3> No class have been added. </h3>
           </div>
-        {% endif %}
+          {% endif %}
+
           <div style="text-align: center">
           <a href="{{ url_for('classes.add_class') }}" class="btn btn-default btn-lg">
-            <i class="fa fa-plus"></i>
-            Add Class
+            <i class="fa fa-plus"></i> Add Class
           </a>
-          </div>
           </div>
       </div>
     </div>
