--- a/app/templates/admin/parent_to_student/edit.html
+++ b/app/templates/admin/parent_to_student/edit.html
@@ -10,8 +10,8 @@
       <div class="inner">
         <div class="center">
             <h1> {{ title }} </h1>
-            {% if add_parent_to_student==False %}
-                <h2>{{ parent_name }}</h2>
+            {% if not add_parent_to_student %}
+                <h2>Parent | {{ parent_to_student.parentStudent }}</h2>
             {% endif %}
             <br/>
             {{ wtf.quick_form(form) }}
