Added PAGE Subjects

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,6 +28,7 @@
                         <li><a href="{{ url_for('admin.list_teachers_info') }}">Teachers</a></li>
                         <li><a href="{{ url_for('admin.list_students_class') }}">Students</a></li>
                         <li><a href="{{ url_for('admin.list_parent_to_student') }}">Parents</a></li>
+                        <li><a href="{{ url_for('admin.list_subjects') }}">Subjects</a></li>
                         <li><a href="{{ url_for('admin.list_classrooms') }}">Classrooms</a></li>
                         <li><a href="{{ url_for('classes.list_classes') }}">Classes</a></li>
                         <li><a href="{{ url_for('admin.list_roles') }}">Roles</a></li>
@@ -68,6 +69,7 @@
                             <li><a href="{{ url_for('admin.list_teachers_info') }}">Teachers</a></li>
                             <li><a href="{{ url_for('admin.list_students_class') }}">Students</a></li>
                             <li><a href="{{ url_for('admin.list_parent_to_student') }}">Parents</a></li>
+                            <li><a href="{{ url_for('admin.list_subjects') }}">Subjects</a></li>
                             <li><a href="{{ url_for('admin.list_classrooms') }}">Classrooms</a></li>
                             <li><a href="{{ url_for('classes.list_classes') }}">Classes</a></li>
                             <li><a href="{{ url_for('admin.list_roles') }}">Roles</a></li>
